Adding some missing steps from setup and setup as one of the first things in README

--- a/.sample.env
+++ b/.sample.env
@@ -1,12 +1,12 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_DB=testdb
+POSTGRES_USER=testuser
+POSTGRES_PASSWORD=pass
 
-SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/{pane siia POSTGRES_DB nimi}
-SPRING_DATASOURCE_USERNAME=
-SPRING_DATASOURCE_PASSWORD=
+SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/testdb
+SPRING_DATASOURCE_USERNAME=testuser
+SPRING_DATASOURCE_PASSWORD=pass
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=placeholder
+GOOGLE_CLIENT_SECRET=placeholder
 
 JWT_SECRET="" # openssl rand -base64 32
